# PhenoFusion3D

./: .gitattributes  .gitignore  3D_recons.py  ConvexHullArea.ipynb  README.md  ScreenCamera_2026-04-30-23-15-23.json  ScreenCamera_2026-04-30-23-15-36.json  ScreenCamera_2026-04-30-23-26-00.json  ScreenCamera_2026-04-30-23-42-19.json  ScreenCamera_2026-05-01-15-39-33.json  ScreenCamera_2026-05-02-13-43-01.json  ScreenCamera_2026-05-02-13-44-58.json  ScreenCamera_2026-05-02-14-16-10.json  ScreenCamera_2026-05-02-14-25-33.json  TraitExtractionFunctions.ipynb  _copy_ply.py  batch_canopy_report.py  create_topdown_mosaic.py  export_nerfstudio_transforms.py  inspect_dataset.py  launch.bat  launch.ps1  launch.sh  main.py  pipeline_reconstructor.py  pipeline_registration_agent.py  plane_norm.npy  pot_height.npy  pyproject.toml  reconstruct_canopy.py  reconstruct_canopy_sequence.py  reconstruct_icp_sequence.py  reconstruct_scene_sequence.py  reconstruct_tsdf.py  render_pcd_views.py  requirements.txt  run_tsdf_sweep.py  single_frame_projection.py  sweep_canopy.py  test_with_one_img.py  (+3 more)
.github/workflows/: install-smoketest-inner.sh  install-smoketest.yml
app/: calibration_worker.py  canopy_sequence_worker.py  canopy_worker.py  controller.py  main_window.py  postprocess_worker.py  quality_worker.py  worker.py
app/panels/: capture_panel.py  data_panel.py  gantry_panel.py  log_panel.py  metrics_panel.py  postprocess_panel.py  quality_panel.py
capture/: base.py  realsense_capture.py  ros_capture.py
docs/: L515_SETUP.md  canopy_reconstruction_notes.md  canopy_reconstruction_notes_zh.md  capture_protocol.md
experiments/calibration/: candidate_intrinsics.json  intrinsics_sweep.csv  sweep_intrinsics.py
file_io/: exporter.py  loader.py
install/: README.md  install_linux.sh
phenofusion3d/processing/: rgbd.py
processing/: __init__.py  canopy.py  icp.py  pointcloud_post.py  quality.py  reconstructor.py  registration_agent.py  rgbd.py  utils.py
sample_output/: README.md
scripts/: clean_pointcloud.py  extract_traits.py  run_baseline.py  segment_plants.py
stakeholder_reference/: 3D_reconstruction_integrated.ipynb  utils.py
tests/: test_agent_integration.py  test_canopy_repair.py  test_e2e.py  test_registration_agent.py  test_registration_agent_strategies.py
visualiser/: viewer.py
